# bqskit-qfactor-jax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  job.sh  pyproject.toml  qfactor_jax_batched_jit.py  setup.cfg  setup.py  unitary_acc.py  unitarybuilderjax.py
.github/workflows/: tests.yml
bqskitgpu/: __init__.py  qfactor_jax.py  qfactor_jax_batched_jit.py  qfactor_sample_jax.py  singlelegedtensor.py  unitary_acc.py  unitarybuilderjax.py  unitarymatrixjax.py
bqskitqfactorjax/: __init__.py  qfactor_jax.py  qfactor_sample_jax.py  singlelegedtensor.py  unitary_acc.py  unitarybuilderjax.py  unitarymatrixjax.py
examples/: adder63_10q_block_28.qasm  adder63_10q_block_47.qasm  adder63_10q_block_63.qasm  compare_qfactor_sample_to_qfactor.py  compare_state_sample_to_orig.py  gate_deletion_syth.py  grover5.qasm  heisenberg64_10q_block_036.qasm  heisenberg64_10q_block_100.qasm  heisenberg64_10q_block_104.qasm  qsearch_using_qfactor_sample.py  shor26_10q_block_051.qasm  shor26_10q_block_134.qasm  test_small.py  toffoli_instantiation.py  toffoli_instantiation_using_sampling.py  vqe12_10q_block145.qasm
examples/bqskit_env_scripts/: init_multi_node_multi_gpu_slurm_run.sh  run_workers_and_managers.sh  single_server_env.sh
qfactorjax/: __init__.py  qfactor.py  qfactor_sample_jax.py  singlelegedtensor.py  unitary_acc.py  unitarybuilderjax.py  unitarymatrixjax.py
tests/: test_examples.py  test_single_leg_tensor.py
