[metadata]
name = bqskit-qfactor-jax
version = 0.0.1
description = BQskits QFactor implementation on GPUs using JAX
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BQSKit/bqskit-qfactor-jax
author = LBNL - BQSKit developers
author_email = edyounis@lbl.gov
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Compilers
    Typing :: Typed
keywords = berkeley quantum synthesis toolkit partitioning qfactor instantiations
project_urls =
    Bug Tracker = https://github.com/BQSKit/bqskit-qfactor-jax/issues
    Source Code = https://github.com/BQSKit/bqskit-qfactor-jax
    Documentation = https://bqskit.readthedocs.io/en/latest

[options]
packages = find:
install_requires =
    numpy
    bqskit>=1.1.0
    typing-extensions>=4.0.0
    ; For the jax+gpu installation see JAX's wiki
    jax
    jaxlib
    jaxtyping
python_requires = >=3.8, <4

[options.packages.find]
exclude =
    tests
    examples

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 2.8
testpaths = tests/
python_files = test*.py
norecursedirs = .env

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
plugins = numpy.typing.mypy_plugin

[tox:tox]
minversion = 3.3.0
envlist = pre-commit,py38,py39,py310,py311
skip_missing_interpreters = true

[testenv]
passenv =
    TERM
deps =
    numpy>=1.22
    pytest>=2.8
    hypothesis[numpy,zoneinfo]>=6.14.5
    tzdata
commands =
    pytest {posargs}

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
